1) Exclude .properties file in .jar when packaging 2) Auto detect DEBUG mode by attempting to load the property file 3) inline command scripting to shutdown vm

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
     </properties>
 
     <build>
+
         <plugins>
 
             <!-- Build an executable JAR -->
@@ -93,6 +94,15 @@
             </plugin>
 
         </plugins>
+
+        <resources>
+            <resource>
+                <directory>resources</directory>
+                <excludes>
+                    <exclude>**/*.properties</exclude>
+                </excludes>
+            </resource>
+        </resources>
     </build>
 
 </project>
