--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,15 @@
 
     <build>
 
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>application.properties</exclude>
+                </excludes>
+            </resource>
+        </resources>
+
         <plugins>
 
             <!-- Build an executable JAR -->
@@ -94,15 +103,6 @@
             </plugin>
 
         </plugins>
-
-        <resources>
-            <resource>
-                <directory>resources</directory>
-                <excludes>
-                    <exclude>**/*.properties</exclude>
-                </excludes>
-            </resource>
-        </resources>
     </build>
 
 </project>
